# RecognitionAndGraspLearningSystem

./: CMakeLists.txt  CustomTypes.h  config.h  globals.h  mainRealsense.cpp  objectRecognitionParameters.json  utils.cpp
files/: Database16 (copy).json  Database16.json  Database_22_highQualityGrasps.json  GeneratedGrasps_22.json  Generated_Grasps.json  Grasping_Data_to_Panda.json
src/BasicTools/: .cproject  .project  CMakeLists.txt
src/BasicTools/Aux/: StablePlanarQuadGrid.cpp  StablePlanarQuadGrid.h  Stopwatch.h
src/BasicTools/ComputationalGeometry/Algorithms/: RANSACPlaneDetector.cpp  RANSACPlaneDetector.h
src/BasicTools/ComputationalGeometry/DataStructures/Octree/: Octree.cpp
src/BasicTools/DataStructures/: EdgeStructure.h  PointSet.h  PointSetAdapter.h
src/BasicTools/Functions/: CosSqrScalarField.h  Curve3.h  Function.h  Rotations.h  ScalarField.h  VectorField3.h
src/BasicTools/Interpolation/: TPSVectorField3.cpp  TPSVectorField3.h
src/BasicTools/LinearAlgebra/: Matrix.cpp
src/BasicTools/Optimization/: GlobalOptimizer.h
src/BasicTools/Stochastics/: RandomGenerator.cpp  RandomGenerator.h
src/BasicTools/Vtk/: VtkCopy.h  VtkRMS.cpp  VtkRMS.h  VtkTransform.cpp  VtkU2VtkPolyData.cpp  VtkU2VtkPolyData.h
src/BasicToolsVis/: .cproject  .project  CMakeLists.txt
src/BasicToolsVis/ComputationalGeometry/: KdTree2vtk.cpp  KdTree2vtk.h  Octree2vtk.cpp  Octree2vtk.h
src/BasicToolsVis/DataStructures/: Array3d2vtk.cpp  Array3d2vtk.h  Box2vtk.cpp  Box2vtk.h  BoxStructure3d2vtk.cpp  BoxStructure3d2vtk.h  EdgeStructure2vtk.cpp  EdgeStructure2vtk.h  NdBoxStructure2vtk.cpp  NdBoxStructure2vtk.h
src/BasicToolsVis/Functions/: Curve32vtk.cpp  Curve32vtk.h  ScalarField2vtk.cpp  ScalarField2vtk.h  VectorField32vtk.cpp  VectorField32vtk.h
src/FreeKinect3d/: .cproject  .project  Makefile
src/FreeKinect3d/example/: main.cpp
src/FreeKinect3d/include/: FK3dImage.h  FK3dPixel.h  FK3dUtils.h  FK3dViewer.h  FreeKinect3d.h  GL3dDrawer.h
src/FreeKinect3d/src/: FK3dImage.cpp  FK3dViewer.cpp  FreeKinect3d.cpp
src/ObjRecRANSAC/: .cproject  .project  CMakeLists.txt  ModelDatabase.cpp  ObjRecRANSAC.cpp  ObjRecRANSAC.h
src/ObjRecRANSAC/Algorithms/: GeometryProcessor.h  ObjRecICP.cpp  ObjRecICP.h
src/ObjRecRANSAC/DataStructures/: DatabaseModelEntry.cpp  DatabaseModelEntry.h
src/ObjRecRANSAC/DataStructures/ORROctree/: ORROctree.cpp
src/ObjRecRANSAC/DataStructures/RangeImage/: ORRRangeImage2.cpp
src/ObjRecRANSAC/Shapes/: ORRPointSetShape.h  PointSetShape.h
src/ObjRecRANSAC/tags/v1.0/: .project  ORRDefines.h  PixelVector.h  UserData.h
src/ObjRecRANSAC/tags/v1.0/Algorithms/: GeometryProcessor.h  ORRVertexCoverOptimizer.cpp  OctreeModelBuilder.cpp
src/ObjRecRANSAC/tags/v1.0/DataStructures/: DatabaseModelEntry.cpp  DatabaseModelEntry.h  OctreeNodeStamp.cpp
src/ObjRecRANSAC/tags/v1.0/Shapes/: PointSetShape.h
src/ObjRecRANSAC/tags/v2.0/: .cproject  CMakeLists.txt  ORRBasicTypes.h  ObjRecRANSAC.cpp  ObjRecRANSAC.h  UserData.h
src/ObjRecRANSAC/tags/v2.0/Algorithms/: GeometryProcessor.h
src/ObjRecRANSAC/tags/v2.0/tags/v1.0/: .cproject  CMakeLists.txt  ModelDatabase.cpp  ModelDatabase.h  ObjRecRANSAC.cpp  ObjRecRANSAC.h  UserData.cpp
src/ObjRecRANSAC/tags/v2.0/tags/v1.0/Algorithms/: ORRVertexCoverOptimizer.h  RangeImage2AcceptanceFunction.cpp  RangeImage2AcceptanceFunction.h
src/ObjRecRANSAC/tags/v2.0/tags/v1.0/DataStructures/: ORRGraphNode.h  ORRUndirectedGraph.h  OctreeNodeStamp.h
src/ObjRecRANSAC/tags/v2.0/tags/v1.0/DataStructures/RangeImage/: ORRRangeImage2.h
src/ObjRecRANSAC/tags/v2.0/tags/v1.0/Shapes/: ORRPointSetShape.h
src/ObjRecRANSACVis/: .cproject  .project  CMakeLists.txt  HashTableBoxStruct32vtk.cpp  HashTableBoxStruct32vtk.h  ORROctree2vtk.cpp  ORROctree2vtk.h  ORRRangeImage2vtk.cpp  ORRRangeImage2vtk.h
src/VtkBasics/: .cproject  .project  CMakeLists.txt  Vtk2Text.cpp  Vtk2Text.h  VtkCube.cpp  VtkCube.h  VtkIO.cpp  VtkIO.h  VtkObjReader.cpp  VtkObjReader.h  VtkObject.h  VtkPoints.h  VtkPolyData.cpp  VtkPolyData.h  VtkSphere.cpp  VtkSphere.h  VtkWindow.cpp  VtkWindow.h
src/VtkBasics/VtkGeometry/: VtkNormals.cpp  VtkNormals.h  VtkPolyDataSimplifier.cpp  VtkPolyDataSimplifier.h
src/VtkBasics/VtkIO/: VtkIOAux.h  VtkOFFReader.cpp  VtkOFFReader.h  VtkPNTReader.cpp  VtkPNTReader.h  VtkPTSReader.cpp  VtkPTSReader.h  VtkPWRReader.cpp  VtkPWRReader.h  VtkPointReader.cpp  VtkPointReader.h  VtkSVSReader.cpp  VtkSVSReader.h
src/VtkVisual/: .cproject  .project  CMakeLists.txt  ConnectingLines2vtk.cpp  ConnectingLines2vtk.h  LinearBlend.cpp  LinearBlend.h  PolygonalCurve2vtk.cpp  PolygonalCurve2vtk.h  SphericalBox2vtk.cpp  SphericalBox2vtk.h  TextIdsAtPoints.cpp  TextIdsAtPoints.h  VoxelGrid2vtk.cpp  VoxelGrid2vtk.h  Vtk3PlaneWidgets.cpp  Vtk3PlaneWidgets.h  VtkNormals.h  VtkParts.h  VtkPolyDataCleaner.cpp  VtkPolyDataCleaner.h  VtkSmoothNormals.h  VtkUnstructuredGrid2vtkPolyData.cpp  VtkUnstructuredGrid2vtkPolyData.h  ZProjectionMesh.cpp  ZProjectionMesh.h
src/btl1/: .cproject  .project  CMakeLists.txt  List.h  Matrix.h  Vector.h
src/btl1/Release/: makefile  sources.mk
src/btl1/Release/eigen3x3/: dsyevc3.d  dsyevh3.d  dsyevq3.d  dsytrd3.d  subdir.mk
vtk-5.10.0/: Makefile  cmake_install.cmake
vtk-5.10.0/CMake/: CheckCXXSourceRuns.cmake  vtkTestBuiltins.cmake  vtkTestExplicitInstantiation.cmake  vtkTestFullSpecialization.cmake  vtkTestStreamsLibrary.cmake  vtkTestTypes.cmake
vtk-5.10.0/Parallel/: VTKParallelCMakeTests.cmake
vtk-5.10.0/src/BasicTools/: Makefile  cmake_install.cmake
vtk-5.10.0/src/BasicToolsVis/: Makefile  cmake_install.cmake
vtk-5.10.0/src/ObjRecRANSAC/: Makefile  cmake_install.cmake
vtk-5.10.0/src/ObjRecRANSACVis/: Makefile  cmake_install.cmake
vtk-5.10.0/src/VtkBasics/: Makefile  cmake_install.cmake
vtk-5.10.0/src/VtkVisual/: Makefile  cmake_install.cmake
vtk-install/include/vtk-5.10/: vtkToolkits.h  vtkgl.h
vtk-install/lib/vtk-5.10/: VTKBuildSettings.cmake  VTKConfig.cmake  VTKConfigVersion.cmake  VTKTargets-release.cmake  VTKTargets.cmake  vtkCommonKit.cmake
(+10 files in other folders)
